--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,3 +1,30 @@
 .navbar {
     background-color: var(--primary-color);
 }
+
+.navbar-nav {}
+
+.navbar-nav a.nav-link {
+    font-weight: 600;
+    color: var(--five-color);
+    transition: all .25s ease;
+}
+
+.navbar-nav a.nav-link:hover {
+    color: var(--first-color);
+    transition: all .25s ease;
+}
+
+.dropdown-menu {
+    border-top: 5px solid var(--first-color) !important;
+    border-radius: 0 !important;
+    box-shadow: var(--shadow-sm) !important;
+}
+
+.dropdown-item {}
+
+.dropdown-item:hover,
+.dropdown-item:focus {
+    background-color: transparent !important;
+    color: var(--first-color) !important;
+}
