--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,9 @@
 :root {
-  --primary-color: red;
-  --white: #ffffff;
+  --first-color: #ED1C24;
+  --second-color: #FDFFFC;
+  --third-color: #235789;
+  --four-color: #F1D302;
+  --five-color: #020100;
+
+  --shadow-sm: 0 .125rem .25rem rgba(0, 0, 0, .075)
 }
