--- a/src/components/Contactbar/Contactbar.css
+++ b/src/components/Contactbar/Contactbar.css
@@ -1,5 +1,5 @@
 .contact-bar {
-    background-color: var(--third-color);
+    background-color: var(--first-color);
     color: var(--second-color);
 }
 
