--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -2,8 +2,6 @@
     background-color: var(--primary-color);
 }
 
-.navbar-nav {}
-
 .navbar-nav a.nav-link {
     font-weight: 600;
     color: var(--five-color);
@@ -21,10 +19,18 @@
     box-shadow: var(--shadow-sm) !important;
 }
 
-.dropdown-item {}
-
 .dropdown-item:hover,
 .dropdown-item:focus {
     background-color: transparent !important;
     color: var(--first-color) !important;
+}
+
+.logo {
+    width: 15.625rem;
+}
+
+@media (max-width: 768px) {
+    .logo {
+        width: 12.5rem;
+    }
 }
