--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,11 @@
 :root {
-  --first-color: #ED1C24;
+  --first-color: #E03423;
   --second-color: #FDFFFC;
   --third-color: #235789;
   --four-color: #F1D302;
   --five-color: #020100;
   --text-color: #6F8BA4;
-
+  --grey-0: #eeeeee;
   --shadow-sm: 0 .125rem .25rem rgba(0, 0, 0, .075)
 }
 
@@ -14,5 +14,21 @@
 }
 
 .section-title {
-  color: var(--third-color);
+  color: var(--five-color);
+  padding-bottom: 1.25rem;
+  font-weight: 400;
+  position: relative;
+}
+
+.section-title:after {
+  content: "";
+  position: absolute;
+  display: block;
+  width: 50px;
+  height: 3px;
+  background: var(--first-color);
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
 }
