--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -1,8 +1,52 @@
 .banner {
     position: relative;
     overflow: hidden;
-    background: #fff;
-    background: url(../../../public/assets/images/slider-bg.jpg) no-repeat;
-    background-size: cover;
-    min-height: 550px;
+    background: url(../../../public/assets/images/banner.jfif) no-repeat;
+    min-height: 630px;
+    background-position: right;
+    background-repeat: repeat-x;
+    background-color: #b4bcc9;
+}
+
+.blur {
+    backdrop-filter: blur(5px) saturate(100%);
+    -webkit-backdrop-filter: blur(5px) saturate(100%);
+    background-color: rgba(39, 39, 39, 0.15);
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
+
+.title {
+    font-size: 3.75rem;
+    line-height: 1.2;
+    letter-spacing: -1.2px;
+    text-transform: capitalize;
+    text-shadow: -1px 0px 3px;
+}
+
+.text {
+    font-weight: 500;
+}
+
+.margin {
+    margin-top: 10rem;
+    position: relative;
+}
+
+@media(max-width:576px) {
+    .margin {
+        margin-top: 8rem;
+    }
+}
+
+.margin:before {
+    content: '';
+    width: 70px;
+    height: 5px;
+    position: absolute;
+    background: red;
+    top: -20px;
 }
