--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -47,6 +47,6 @@
     width: 70px;
     height: 5px;
     position: absolute;
-    background: red;
+    background: var(--first-color);
     top: -20px;
 }
