--- a/src/pages/ProductDetails/ProductDetails.css
+++ b/src/pages/ProductDetails/ProductDetails.css
@@ -44,7 +44,7 @@
     width: 65px;
     height: 3px;
     position: absolute;
-    background: red;
+    background: var(--first-color);
     bottom: 0;
     left: 0;
 }
