--- a/src/pages/Service/Service.css
+++ b/src/pages/Service/Service.css
@@ -1,6 +1,10 @@
-.about-content {
+.service-content {
     font-size: 1.15rem;
     line-height: 1.8;
+}
+
+.question::first-letter {
+    text-transform: uppercase;
 }
 
 .product-title {
