--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -1,16 +1,16 @@
 .banner {
     position: relative;
     overflow: hidden;
-    background: url(../../../public/assets/images/banner.jfif) no-repeat;
-    min-height: 630px;
+    background: url(../../../public/assets/images/cover.JPG) no-repeat;
+    min-height: 550px;
     background-position: right;
     background-repeat: repeat-x;
     background-color: #b4bcc9;
 }
 
 .blur {
-    backdrop-filter: blur(5px) saturate(100%);
-    -webkit-backdrop-filter: blur(5px) saturate(100%);
+    backdrop-filter: blur(1px) saturate(100%);
+    -webkit-backdrop-filter: blur(1px) saturate(100%);
     background-color: rgba(39, 39, 39, 0.15);
     position: absolute;
     top: 0;
@@ -24,7 +24,7 @@
     line-height: 1.2;
     letter-spacing: -1.2px;
     text-transform: capitalize;
-    text-shadow: -1px 0px 3px;
+
 }
 
 .text {
@@ -42,11 +42,11 @@
     }
 }
 
-.margin:before {
+/* .margin:before {
     content: '';
     width: 70px;
     height: 5px;
     position: absolute;
     background: var(--first-color);
     top: -20px;
-}
+} */
