--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -25,7 +25,6 @@
 
 .feature-description,
 .description {
-    color: var(--text-color);
     line-height: 1.875rem;
 }
 
@@ -42,9 +41,16 @@
     border-bottom: 4px solid var(--first-color);
 }
 
+
+
 .service-item {
     background: #fff;
     border-radius: 5px;
+    transition: .5s;
+}
+
+.service-item:hover {
+    transform: scale(1.05);
 }
 
 .service-title {
@@ -60,7 +66,6 @@
 }
 
 .description {
-    color: var(--text-color);
     line-height: 1.875rem;
     font-size: 1.125rem;
 }
