--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -41,6 +41,10 @@
     color: var(--first-color);
 }
 
+.footer-products ul li a i {
+    margin-right: 5px;
+}
+
 .footer-title {
     margin-top: 0;
     font-weight: 500;
