--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -51,3 +51,15 @@
     line-height: 1.2;
     font-size: 1.125rem;
 }
+
+.certification-logo {
+    width: 140px;
+}
+
+.certification-logo:not(:last-child) {
+    margin-right: 5%;
+}
+
+.certification-logo.sm {
+    width: 100px;
+}
