--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -56,6 +56,18 @@
     width: 140px;
 }
 
+@media (max-width: 992px) {
+    .certification-logo {
+        width: 90px;
+    }
+}
+
+@media (min-width: 992px) and (max-width:1400px) {
+    .certification-logo {
+        width: 100px;
+    }
+}
+
 .certification-logo:not(:last-child) {
     margin-right: 5%;
 }
